Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-103707

qmlcompiler: Script bindings with empty blocks hit an assert/crash

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P0: Blocker
    • 6.4.0 Beta1
    • 6.4
    • QML: Compiler
    • None
    • All
    • 827193b3a1 (qt/qtdeclarative/dev) 827193b3a1 (qt/tqtc-qtdeclarative/dev)

    Description

      script bindings with an empty block like this:

      import QtQuick
      Item {
         x: {}
      }
      

      will hit an assert:

      ➜  dev.build ./qtbase/bin/qmllint Crash.qml
      ASSERT: "blockStatement->statements" in file /Users/max/qt-dev/dev/qtdeclarative/src/qmlcompiler/qqmljsimportvisitor.cpp, line 1689
      [1]    7858 abort      ./qtbase/bin/qmllint Crash.qml

      Crashes everything using qmlcompiler including cachegen/qmlsc.

       

      Does not affect 6.3.x or lower.

      Attachments

        For Gerrit Dashboard: QTBUG-103707
        # Subject Branch Project Status CR V

        Activity

          People

            max.goldstein Maximilian Goldstein
            max.goldstein Maximilian Goldstein
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes