qqmljsimportvisitor: Fix assert being hit on empty block bindings

We previously hit an assert / crashed if we saw an empty script binding.

Fixes: QTBUG-103707
Change-Id: I117d984a7d315ecf860d2ada5568637d154ae083
Reviewed-by: Andrei Golubev <andrei.golubev@qt.io>