tests/auto/qml/qqmljsscope/data/emptyBlockBinding.qml
@@ -1,0 +1,6 @@
+import QtQuick
+
+Item {
+    x: {}
+    y: {5}
+}
